--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@actions/core": "1.10.1",
     "@actions/exec": "1.1.1",
     "@actions/github": "6.0.0",
+    "@actions/glob": "0.5.0",
     "@octokit/action": "6.1.0"
   },
   "devDependencies": {
